--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<meta name="author" content="Sailesh Sahu" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<link rel="stylesheet" type="text/css" href="normalize.css" />
+		<link rel="stylesheet" type="text/css" href="demo.css" />
+		<link rel="stylesheet" type="text/css" href="component.css" />
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -31,16 +31,16 @@
 			<section class="interactive-points interactive-points--alter" id="interactive-2" tabindex="0">
 				<img class="static" src="img/map.jpg" alt="Map of Burla" />
 				<div class="backgrounds">
-					<div class="background__element" style="background-image: url(img/1.jpg)"></div>
-					<div class="background__element" style="background-image: url(img/2.jpg)"></div>
-					<div class="background__element" style="background-image: url(img/3.jpg)"></div>
-					<div class="background__element" style="background-image: url(img/4.jpg)"></div>
-					<div class="background__element" style="background-image: url(img/5.jpg)"></div>
-                    <div class="background__element" style="background-image: url(img/6.jpg)"></div>
-                    <div class="background__element" style="background-image: url(img/7.jpg)"></div>
-                    <div class="background__element" style="background-image: url(img/8.jpg)"></div>
-                    <div class="background__element" style="background-image: url(img/9.jpg)"></div>
-                    <div class="background__element" style="background-image: url(img/10.jpg)"></div>
+					<div class="background__element" style="background-image: url(1.jpg)"></div>
+					<div class="background__element" style="background-image: url(2.jpg)"></div>
+					<div class="background__element" style="background-image: url(3.jpg)"></div>
+					<div class="background__element" style="background-image: url(4.jpg)"></div>
+					<div class="background__element" style="background-image: url(5.jpg)"></div>
+                    <div class="background__element" style="background-image: url(6.jpg)"></div>
+                    <div class="background__element" style="background-image: url(7.jpg)"></div>
+                    <div class="background__element" style="background-image: url(8.jpg)"></div>
+                    <div class="background__element" style="background-image: url(9.jpg)"></div>
+                    <div class="background__element" style="background-image: url(10.jpg)"></div>
 				</div>
 				<svg class="points" viewBox="0 0 1885 1080" width="100%" height="100%">
 					<path class="point" d="M509.2,295.4L409.2,195.4c-7.1-7.1-18.6-7.1-25.7,0l0,0c-6.4,6.4-7.1,18.4-1.7,25.7l14.5,21l14.5-21C416.3,213.8,415.6,201.8,409.2,195.4z" transform='translate(460 90)'/><!-- 1 Ashok Nivas-->
@@ -120,9 +120,9 @@
 				</div>
 			</section>			
 		</main>
-		<script src="js/lunar.js"></script>
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/main.js"></script>
+		<script src="lunar.js"></script>
+		<script src="imagesloaded.pkgd.min.js"></script>
+		<script src="main.js"></script>
 		<script>
 		(function() {
 			new PointsMap(document.querySelector('#interactive-1'));
