--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 			<header class="codrops-header">
 				<h1 class="codrops-header__title">Interactive Map | Burla, India</h1>
 				<p class="codrops-header__tagline">Hover mouse on pins and click to know more</p>
-				<a class="icon-link" href="https://in.linkedin.com/in/saileshsahu95" title="View Profile on LinkedIn"><span class="icon-text"><img src="img/linkedin.png" width="20" height="20"> Endorse Sailesh on Linkedin</span></a></a>
+				<a class="icon-link" href="https://in.linkedin.com/in/saileshsahu95" title="View Profile on LinkedIn"><span class="icon-text"><img src="linkedin.png" width="20" height="20"> Endorse Sailesh on Linkedin</span></a></a>
 			</header>
 			<p class="message">Please view this on a larger screen.</p>
 			<section class="interactive-points" id="interactive-1" tabindex="0">				
 			</section>
 			<section class="interactive-points interactive-points--alter" id="interactive-2" tabindex="0">
-				<img class="static" src="img/map.jpg" alt="Map of Burla" />
+				<img class="static" src="map.jpg" alt="Map of Burla" />
 				<div class="backgrounds">
 					<div class="background__element" style="background-image: url(1.jpg)"></div>
 					<div class="background__element" style="background-image: url(2.jpg)"></div>
